add in contact MVC for backbone

--- a/app/assets/javascripts/templates/leads/app.hbs.erb
+++ b/app/assets/javascripts/templates/leads/app.hbs.erb
@@ -16,7 +16,7 @@
                       </div>
                     </form> -->
 
-                    <small class="right">Drop a file anywhere new leads</small>
+                    <small class="right">Drop a file anywhere to add new leads</small>
                 </h1>
 
             </div>
