--- a/app/assets/stylesheets/z-custom.css.erb
+++ b/app/assets/stylesheets/z-custom.css.erb
@@ -83,6 +83,10 @@ a.navbar-brand {
     color: #4c5365;
 }
 
+.leads-hover tbody tr {
+    transition: background-color 0.3s ease;
+}
+
 .leads-hover tbody tr:hover {
     cursor: pointer;
 }
@@ -565,11 +569,9 @@ li.nav {
     transition: color 0.3s ease;
 }
 
-
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-brand:hover {
     color: #57bb89;
 }
-
 
 input.upload-csv-button:active {
     border: 20px solid black;
@@ -577,4 +579,14 @@ input.upload-csv-button:active {
 
 .none {
     display: none;
+}
+
+.create-opportunity-button {
+    transition: color 0.3s ease;
+    cursor: pointer;
+    color: #4c5365;
+}
+
+.create-opportunity-button:hover {
+    color: #57bb89; 
 }
