--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -60,7 +60,7 @@
 
                 <div class="row">
                     <h1 class="task-header">
-                        <small>Contacts<a href="#"><span class="right glyphicon glyphicon-plus" aria-hidden="true"></span></small></a>
+                        <small>Contacts<a href="#"><span class="right glyphicon glyphicon-plus create-opportunity-button" aria-hidden="true"></span></small></a>
                     </h1>
                     <hr>
 
@@ -178,108 +178,14 @@
 
                             </div>
 
+
+                            
+
                         </div>
-                                
 
-
-
-
-
-
-
-<!--                         <div class="page-header status-select">
-
-                            <ul class="nav nav-pills">
-                              <li role="presentation" class="active"><a href="#">All</a></li>
-                              <li role="presentation"><a href="#">Notes</a></li>
-                              <li role="presentation"><a href="#">Emails</a></li>
-                              <li role="presentation"><a href="#">Calls</a></li>
-                            </ul>
-                                
-                        </div> -->
                     </div>
 
                 </div>
-
-
-
-
-
-
-
-
-
-<!-- 
-                <div class="row timeline-row">
-
-                    <div class="col-md-1">
-                        <h4><span class="glyphicon glyphicon-earphone timeline-icon" aria-hidden="true"></span></h4>
-                    </div>
-                    
-                    <div class="col-md-11 right">
-                        <div class="panel panel-default timeline-content">
-                          <div class="panel-heading timeline-title">
-                          Ben didn't pick up - will try call again tomorrow. 
-                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
-                          <span class="right salesperson-first-name">Ben</span>
-                          </div>
-                          <div class="panel-body">
-                            Called Ben Cochrane <span class="days-ago">5 days ago</span><a href="#"><span class="edit"> edit </span></a>
-                          </div>
-                        </div>
-                    </div>
-
-                </div> -->
-
-
- <!--                <div class="row timeline-row">
-
-                    <div class="col-md-1">
-                        <h4><span class="glyphicon glyphicon-comment timeline-icon" aria-hidden="true"></span></h4>
-                    </div>
-                    
-                    <div class="col-md-11 right">
-                        <div class="panel panel-default timeline-content">
-                          <div class="panel-heading timeline-title">
-                          Chatted with Ben - he likes what the product can do, he is going to finance to see if it's in budget and asked me to call him the next day. 
-                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
-                          <span class="right salesperson-first-name">Ben</span>
-                          </div>
-                          <div class="panel-body">
-                            Note written <span class="days-ago">6 days ago</span><a href="#"><span class="edit"> edit </span></a>
-                          </div>
-                        </div>
-                    </div>
-
-                </div> -->
-
-
-
-<!--                 <div class="row timeline-row email-panel-holder">
-
-
-                </div> -->
-
-
-<!--                 <div class="row timeline-row">
-
-                    <div class="col-md-1">
-                        <h4><span class="glyphicon glyphicon-log-in timeline-icon" aria-hidden="true"></span></h4>
-                    </div>
-                    
-                    <div class="col-md-11 right">
-                        <div class="panel panel-default timeline-content">
-                          <div class="panel-heading timeline-title">
-                          Lead created <span class="days-ago">2 weeks ago</span> 
-                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
-                          <span class="right salesperson-first-name">Ben</span>
-                          </div>
-                        </div>
-                    </div>
-
-                </div>   -->              
-
-
 
             </div>            
         </div>
