--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="dashbaord">SalesPal</a>
+                <a class="navbar-brand" href="dashboard">SalesPal</a>
 
             </div>
 
