add hash rocket instead of colon for link to sign out path with link helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
                     <li><a href="leads">Bulk Import</a></li>
                     <li><a href="leads">Invite Coworkers</a></li>
                     <li class="divider"></li>
-                    <li><%= link_to "Logout", signout_path, data: { "backbone-link": false } %></li>
+                    <li><%= link_to "Logout", signout_path, data: { "backbone-link" => false } %></li>
                   </ul>
                 
    
