add in success panel on drag and drop

--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -10,7 +10,7 @@
 
                 <div class="row">
                     <h1 class="task-header">
-                        <small>Tasks<a href="#"><span class=" right glyphicon glyphicon-plus" aria-hidden="true"></span></small></a>
+                        <small>Tasks<a href="#"><span class=" right glyphicon glyphicon-plus create-task-button" aria-hidden="true"></span></small></a>
                     </h1>
                     <hr>
                     <ul>
