--- a/app/assets/javascripts/templates/leads/app.hbs.erb
+++ b/app/assets/javascripts/templates/leads/app.hbs.erb
@@ -23,7 +23,7 @@
         </div>
         
 
-        <div class="row">
+<!--         <div class="row">
             <div class="col-lg-12">
                 <div class="alert alert-info alert-dismissable">
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -31,6 +31,16 @@
                 </div>
             </div>
         </div>
+ -->
+
+        <div class="row hidden lead-add-success">
+            <div class="col-lg-12">
+                <div class="alert alert-info alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                    <i class="fa fa-info-circle"></i>  <strong>Your leads were successfully added below.</strong>
+                </div>
+            </div>
+        </div>        
         
 
         <form class="none" id="csv-upload-form" enctype="multipart/form-data" action="/api/leads/import" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token">
