turn off welcome controller connect to gmail

--- a/app/assets/stylesheets/z-custom.css.erb
+++ b/app/assets/stylesheets/z-custom.css.erb
@@ -18,8 +18,8 @@ pre {
 }
 
 .collapse.navbar-collapse.navbar-ex1-collapse {
-    background-color: #fed587;
-    color: #9da3b3 !important;
+    background-color: #38b29a;
+    /*color: #9da3b3 !important;*/
 }
 
 h3.panel-title {
@@ -41,7 +41,7 @@ h1.lead-title a {
 
 body, .nav.navbar-nav.side-nav, #wrapper {
     background-color: #4c5365 !important;
-    color: #9da3b3 !important;
+    /*color: #9da3b3 !important;*/
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
@@ -49,7 +49,7 @@ body, .nav.navbar-nav.side-nav, #wrapper {
 }
 
 .table-hover>tbody>tr:hover {
-    background-color: #fed587;
+    background-color: #38b29a;
 }
 
 .navbar.navbar-inverse.navbar-fixed-top {
@@ -196,7 +196,7 @@ a.navbar-brand {
 
 
 .glyphicon.timeline-icon:hover {
-    border: 3px solid #fed587;
+    border: 3px solid #38b29a;
 }
 
 
@@ -265,7 +265,7 @@ a.navbar-brand {
     top: 1em;
     margin-bottom: 2em;
     border-radius: 4em;
-    background-color: #fed587;
+    background-color: #38b29a;
     /*padding-bottom: 1.5em;*/
 }
 
@@ -275,7 +275,7 @@ a.navbar-brand {
 }
 
 .side-nav li a:hover, .side-nav li a:focus {
-    background-color: #fed587 !important;   
+    background-color: #38b29a !important;   
 }
 
 .company-heading {
@@ -326,13 +326,13 @@ a.navbar-brand {
 
 .timeline-input-select {
     transition: background-color 0.3s ease;
-    color: #4c5365 !important;
+    /*color: #4c5365 !important;*/
     border: none;
 }
 
 
 .timeline-input-select:hover {
-    background-color: #fed587;
+    background-color: #38b29a;
     /*color: white;*/
 }
 
@@ -424,13 +424,15 @@ a.navbar-brand {
     position: relative;
     color: #4c5365;
     padding: 0.5em;
-    transition: background-color 0.3s ease;
+    /*transition: background-color 1s ease;*/
+    transition: color 0.1s ease;
     border-radius: 2.5em;
 }
 
 
 .google-user-dropdown:hover {
-    background-color: #FAC869;
+    background-color: #2F9984;
+    color: #efede7;
 }
 
 .google-user-dropdown:focus {
@@ -522,6 +524,7 @@ li.nav {
     position: relative;
     top: -0.5em;
     left: 0em;
+    color: ;
 }
 
 
@@ -593,7 +596,6 @@ input.upload-csv-button:active {
 
 .hidden {
     display: none;
-    /*animation: fadeInLoad 4s;*/
 }
 
 .showing {
@@ -627,7 +629,7 @@ input.upload-csv-button:active {
     }
 
     .navbar.navbar-inverse.navbar-fixed-top {
-        background-color: #fed587;
+        background-color: #38b29a;
         height: 8em;
     }
 
@@ -637,7 +639,7 @@ input.upload-csv-button:active {
     }
 
     .navbar-inverse .navbar-toggle .icon-bar {
-        background-color: #fed587;
+        background-color: #38b29a;
     }
 
     a.navbar-brand {
@@ -646,11 +648,15 @@ input.upload-csv-button:active {
     }
 
     .navbar-header {
-        background-color: #fed587;
+        background-color: #38b29a;
     }
 
     .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
         background-color: #9da3b3;
+    }
+
+    .navbar-header {
+        color: white;
     }
 
     h1.page-header small.right {
