--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,8 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="dashboard">SalesPal</a>
+                <!-- <a class="nav-title" href="dashboard">SalesPal</a> -->
+                <h2 class="nav-title">SalesPal</h2>
 
             </div>
 
